# rust-robot

./: .gitignore  Cargo.toml  README.md  build  build_docker.sh  run
backup/coinex/: mod.rs
backup/kucoin/: mod.rs
docker/: Dockerfile  docker-compose.yml
src/: env.rs  main.rs  rest_api.rs  robot.rs  utils.rs
src/coinex/: mod.rs
src/common/: environments.rs  mod.rs  utils.rs
src/exchange/: general.rs  mod.rs  structs.rs
src/exchange/bybit/: market_structs.rs  mod.rs
src/kucoin/: mod.rs
