[package]
name = "rust-robot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = true
opt-level = 3  # Optimize for size.

[profile.dev]
opt-level = 0

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_urlencoded = "0.7.0"
log = "0.4.14"
simplelog = "0.10.2"
reqwest = { version = "0.11.4", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.68"
sha256 = "1.0.2"
tokio = { version = "1", features = ["full"] }
actix-web = "3.3.3"
rustc-serialize = "0.3.24"
ring = "0.16.20"
data-encoding = "2.3.2"
hex = "0.4.3"
rand = "0.8.4"
base64 = "0.13.0"
